# sample-project-python

./: README.md  artificial-load-linux  main.py  pyproject.toml
artemis_scripts/: benchmark.sh  build.sh  clean.sh  test.sh
src/llm_benchmark/: __init__.py
src/llm_benchmark/algorithms/: primes.py  sort.py
src/llm_benchmark/control/: double.py  single.py
src/llm_benchmark/datastructures/: dslist.py
src/llm_benchmark/generator/: gen_list.py
src/llm_benchmark/sql/: query.md  query.py
src/llm_benchmark/strings/: strops.py
tests/llm_benchmark/algorithms/: test_primes.py
tests/llm_benchmark/control/: test_double.py  test_single.py
tests/llm_benchmark/datastructures/: test_dslist.py
tests/llm_benchmark/generator/: test_gen_list.py
tests/llm_benchmark/sql/: test_query.py
