[tool.poetry]
name = "llm_benchmark"
version = "0.1.0"
description = "A collection of python functions to benchmark llm projects"
authors = ["Matthew <matthew.truscott@turintech.ai>"]
readme = "README.md"

[tool.poetry.scripts]
main = "main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
